change client to ng standard instead of biskin starter

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -4,24 +4,9 @@
 /dist
 /tmp
 /out-tsc
-# Only exists if Bazel was run
-/bazel-out
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Logs
-logs
-*.log
 
 # dependencies
-/node_modules/
-
-# profiling files
-chrome-profiler-events.json
-speed-measure-plugin.json
+/node_modules
 
 # IDEs and editors
 /.idea
@@ -31,8 +16,6 @@ speed-measure-plugin.json
 *.launch
 .settings/
 *.sublime-workspace
-*.swp
-*.iml
 
 # IDE - VSCode
 .vscode/*
@@ -40,7 +23,6 @@ speed-measure-plugin.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
 
 # misc
 /.sass-cache
@@ -48,7 +30,6 @@ speed-measure-plugin.json
 /coverage
 /libpeerconnection.log
 npm-debug.log
-/npm-debug.log.*
 yarn-error.log
 testem.log
 /typings
@@ -56,5 +37,3 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-ehthumbs.db
-Icon?
