--- a/client/package.json
+++ b/client/package.json
@@ -1,72 +1,48 @@
 {
-  "name": "DEaaS",
+  "name": "deaa-s",
   "version": "0.0.0",
   "scripts": {
-    "start": "node ./node_modules/@angular/cli/bin/ng serve --hmr=true --hmrWarning=false",
-    "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
-    "test": "node ./node_modules/@angular/cli/bin/ng test",
-    "e2e": "node ./node_modules/@angular/cli/bin/ng e2e",
-    "lint": "npm-run-all --silent --parallel 'lint:*'",
-    "lint:eslint": "nps eslint",
-    "lint:stylelint": "nps stylelint",
-    "fix": "npm-run-all --silent --parallel 'fix:*'",
-    "fix:eslint": "nps eslint:fix",
-    "fix:stylelint": "nps stylelint:fix"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
-    "@angularclass/bootloader": "1.0.1",
-    "@bison/biskin-kit": "^1.0.1",
-    "@ng-bootstrap/ng-bootstrap": "~5.1.0",
-    "ag-grid-angular": "~21.2.2",
-    "ag-grid-community": "~21.2.2",
-    "ag-grid-enterprise": "~21.2.2",
-    "bootstrap": "~4.3.1",
-    "css-vars": "^2.2.0",
-    "date-fns": "^2.5.0",
-    "lodash-es": "4.17.15",
-    "ngx-toastr": "11.1.2",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.2.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-builders/jest": "~8.2.0",
-    "@angular-devkit/build-angular": "~0.803.10",
-    "@angular/cli": "~8.2.0",
-    "@angular/cdk": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
-    "@angularclass/hmr": "2.1.3",
-    "@bison/global-auto-configurations": "0.1.0",
-    "@types/jasmine": "~3.4.4",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/jest": "^24.0.16",
-    "@types/node": "~10.14.14",
-    "babel-jest": "^24.8.0",
-    "eslint": "^6.1.0",
-    "husky": "^3.0.3",
-    "jasmine-core": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "~6.2.3",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.3.0",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^24.8.0",
-    "lint-staged": "^9.2.1",
-    "npm-run-all": "^4.1.5",
-    "nps": "^5.9.5",
-    "prettier": "^1.18.2",
-    "protractor": "~5.4.2",
-    "stylelint": "^11.1.1",
-    "ts-node": "^8.3.0",
-    "typescript": "~3.4.0",
-    "cpx": "1.5.0",
-    "mkdirp": "0.5.1",
-    "rimraf": "3.0.0"
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~2.9.2"
   }
 }
