--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve": "node ./node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --disable-host-check --port 3001 --hmr=true --hmrWarning=false"
+    "serve": "node ./node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --disable-host-check --hmr=true --hmrWarning=false"
   },
   "private": true,
   "dependencies": {
