--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "serve": "node ./node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --disable-host-check --hmr=true --hmrWarning=false"
   },
   "private": true,
   "dependencies": {
