--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 build/
+*~
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
@@ -13,6 +14,9 @@ build/
 .settings
 .springBeans
 .sts4-cache
+
+### Eclipse
+bin/
 
 ### IntelliJ IDEA ###
 .idea
